hide overflow on modal now worky!

--- a/src/app.css
+++ b/src/app.css
@@ -14,3 +14,7 @@ body{
     @apply bg-[#17123b] text-white;
     font-family: 'Inter', sans-serif;
 }
+
+body:has(.modal){
+    overflow: hidden;
+}
